[package]
name = "rusteze"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Config parsing
serde_json = "1.0"                                # JSON handling
bytes = "1.3"                                    # Efficient byte handling
log = "0.4"                                      # Logging framework
env_logger = "0.10"                              # Environment-based logger
