[package]
name = "rusteze"
version = "0.1.0"
edition = "2021"

[dependencies]
redis-protocol = "*"                               # Added this line
tokio = { version = "1.42", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] } # Config parsing
serde_yaml = "0.9"                                 # For reading YAML files
serde_json = "1.0"                                 # JSON handling
bytes = "1.3"                                      # Efficient byte handling
log = "0.4"                                        # Logging framework
env_logger = "0.10"                                # Environment-based logger
clap = { version = "4.0", features = ["derive"] }  # CLI argument parser
